# frogmouth

./: .gitignore  .pre-commit-config.yaml  ChangeLog.md  PLAN.md  README.md  pyproject.toml
frogmouth/app/: app.py
frogmouth/data/: data_directory.py
frogmouth/dialogs/: yes_no_dialog.py
frogmouth/utility/: advertising.py
frogmouth/widgets/: viewer.py
frogmouth/widgets/navigation_panes/: history.py  local_files.py  navigation_pane.py
src/frogmouth/app/: app.py
src/frogmouth/data/: bookmarks.py  config.py  history.py
src/frogmouth/dialogs/: __init__.py  help_dialog.py  input_dialog.py  text_dialog.py  yes_no_dialog.py
src/frogmouth/screens/: main.py
src/frogmouth/utility/: __init__.py  forge.py  image_loader.py  image_resolver.py  type_tests.py
src/frogmouth/widgets/: markdown.py  navigation.py  omnibox.py  viewer.py
src/frogmouth/widgets/navigation_panes/: bookmarks.py  history.py  local_files.py  navigation_pane.py  table_of_contents.py
tests/: test_image.py  test_markdown_images.py  test_viewer_visit.py
