[build-system]
  requires      = ["hatchling>=1.25"]
  build-backend = "hatchling.build"

[project]
  name = "frogmouth"
  urls = { Homepage = "https://github.com/Textualize/frogmouth" }
  version = "0.9.2"
  description = "A Markdown document viewer for the terminal"
  authors = [{ name = "Dave Pearson", email = "dave@textualize.io" }]
  license = { text = "MIT" }
  readme = "README.md"
  requires-python = ">=3.8"
  classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Other Audience",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
  ]
  dependencies = [
    "textual==0.53.1",
    "httpx>=0.24.1,<0.25",
    "xdg>=6,<7",
    'typing-extensions>=4.5; python_version < "3.11"',
  ]
  [project.optional-dependencies]
    dev = [
      "textual-dev>=1.1",
      "mypy>=1.1.1",
      "pylint>=2.17.1",
      "pre-commit>=3.2.1",
    ]

  [project.scripts]
    frogmouth = "frogmouth.app.app:run"
