[build-system]
  requires      = ["hatchling>=1.25"]
  build-backend = "hatchling.build"

[project]
  name = "frogmouth"
  urls = { Homepage = "https://github.com/Textualize/frogmouth" }
  version = "0.9.2"
  description = "A Markdown document viewer for the terminal"
  authors = [{ name = "Dave Pearson", email = "dave@textualize.io" }]
  license = { text = "MIT" }
  readme = "README.md"
  requires-python = ">=3.8"
  classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Other Audience",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
  ]
  dependencies = [
    "textual==0.53.1",
    "httpx>=0.24.1,<0.25",
    "xdg>=6,<7",
    'typing-extensions>=4.5; python_version < "3.11"',
  ]

  [project.scripts]
    frogmouth = "frogmouth.app.app:run"

[dependency-groups]
  dev = [
    "coverage>=7.6.1",
    "pre-commit>=3.5.0",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.1",
    "pytest-randomly>=3.15.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.13.0",
    "textual-dev>=1.5.1",
    "ty>=0.0.1a20",
]
